# architectureIQ-backend

./: README.md  config.py  main.py  pyproject.toml  utils.py
api/models/: document.py  findings.py  project.py  review.py  summaries.py
api/routes/: analytics.py  document.py  findings.py  projects.py  reviews.py
api/services/: blob_storage.py  consumer.py  cosmos_db.py  publisher.py  store.py
api/utils/: dependencies.py
orchestration/: workflow.py
orchestration/agents/: aggregator.py  auto_retry.py  dispatcher.py
orchestration/agents/models/: __init__.py
orchestration/agents/prompts/system/: AGGREGATOR.md  ARCHITECTURE_FACTS.md  CURATOR.md  EA_REVIEWER.md  IQ_REVIEWER.md
orchestration/agents/state/: __init__.py
worker/: agentic_review.py  document_processing.py
