[project]
name = "enterp-architect-reviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agent-framework>=1.7.0",
    "agent-framework-devui>=1.0.0b260528",
    "azure-cosmos>=4.16.1",
    "azure-servicebus>=7.14.3",
    "azure-storage-blob>=12.30.0b1",
    "black>=26.5.1",
    "fastapi>=0.133.0",
    "ipython>=9.14.1",
    "pydantic>=2.14.0a1",
    "uvicorn>=0.49.0",
]
